Update API and upgrade opera version to 0.6.9
